bookshelf/static/style.css
/* ... */
form.modal textarea:focus,
form.modal textarea:focus {
	border-color: #aaa;
	outline: none;
}

form.modal input[type=submit] {
	-webkit-appearance: none;
	background: #5997d6;
	border-radius: 3px;
	border: none;
	color: #fff;
	cursor: pointer;
	display: block;
	font-size: .9em;
	margin-top: 1.5em;
	padding: 5px 10px 6px;
}

form.modal input[type=submit]:hover {
	background: #000;
}

form.modal a.cancel-link {
	color: #888;
	cursor: pointer;
	float: right;
	font-size: .8em;
	text-decoration: none;
}

form.modal a.cancel-link:hover {
	color: #000;
}

form.modal input[name=tags] {
	font-size: 1em;
}

form.modal ul.tagit {
	border-color: #bbb;
	border-radius: 3px;
	font-size: 1em;
	margin-top: 0;
	padding: 4px 5px;
}

form.modal ul.tagit li.tagit-choice .tagit-label:not(a) {
	color: #222;
}

form.modal ul.tagit li.tagit-choice {
	background-color: #d4efbc;
	border-color: #d4efbc;
	border-radius: 3px;
}

form.modal ul.tagit li.tagit-choice-editable {
	font-size: .9em;
	padding: 2px 20px 3px 6px;
}

form.modal ul.tagit li.tagit-choice .tagit-close {
	margin-top: -9px;
}

form.modal ul.tagit li.tagit-choice .tagit-close .text-icon {
	font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
	color: #9ec78b;
}

form.modal ul.tagit input[type=text] {
	font-size: .9em;
	width: 100px;
}

form.modal ul.tagit li.tagit-new {
	margin-top: 0;
}

form.modal.padless {
	padding: 0;
}

form.modal.padless .modal-group {
	padding-left: 15px;
	padding-right: 15px;
}

@media screen and (min-width: 700px) {
	form.modal.padless .modal-group {
		padding-left: 25px;
		padding-right: 25px;
	}
}


form.modal#add-entry-modal {
	position: fixed;
}

form.modal#add-entry-modal header {
	background: #326299;
	border-radius: 5px 5px 0 0;
}

form.modal#add-entry-modal .cancel-link {
	color: #b7e1ff;
	margin-top: 15px;
}

form.modal#add-entry-modal .cancel-link:hover {
	color: #fff;
}

form.modal#add-entry-modal h2 {
	color: #b7e1ff;
	font-size: 1.2em;
	display: inline-block;
	margin: 0;
	margin-right: 8px;
	position: relative;
	top: -5px;
}

form.modal#add-entry-modal #entry-box {
	-moz-appearance: textfield;
	background: rgba(0, 0, 0, 0.4);
	border: none;
	border-radius: 3px;
	color: #fff;
	font-size: 1.4em;
	margin: 8px 3px;
	padding: 2px 6px;
	position: relative;
	top: 5px;
	width: 2.5em;
}

form.modal#add-entry-modal .comment label {
	color: #a5b8c7;
	font-size: .8em;
	margin-bottom: 5px;
}

form.modal#add-entry-modal .comment label .title {
	font-style: italic;
}

form.modal#add-entry-modal .comment textarea#comment {
	border: none;
	font-size: 1em;
	min-height: 4em;
	max-height: initial;
	padding: 0;
	resize: none;
}

form.modal#add-entry-modal .modal-group.save {
	background: #eee;
	border-radius: 0 0 5px 5px;
	overflow: hidden;
	padding-top: 8px;
	padding-bottom: 8px;
}

form.modal#add-entry-modal .modal-group.save input[type=submit] {
	float: right;
	margin-top: 0;
}


/* On-page forms */
/* -------------------------------------------------- */

form .group label {
	color: #888;
	display: block;
	margin-bottom: .2em;
}

form .group section {
	margin-bottom: 1em;
}

form input[type=text], form input[type=number], form input[type=password] {
	border: solid 1px #bbb;
	border-radius: 2px;
	font-size: 1.2em;
	padding: 4px 6px;
}

form input[type=text]:focus, form input[type=number]:focus, form input[type=password]:focus {
	outline: none;
}

form input[type=number]::-webkit-inner-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

form input[type=number]::-webkit-outer-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

form input.button {
	background: #6392c8;
	border: none;
	border-radius: 5px;
	color: #fff;
	cursor: pointer;
	font-size: 1em;
	padding: 4px 10px 6px;
}

form input.button:hover {
	background: #444;
}

form .group.optional {
	border-top: solid 1px #ddd;
	font-size: .8em;
	margin-top: 3em !important;
	padding-top: 2em;
}

form .group.optional label {
	color: #999;
}

form .group.optional input[type=text],
form .group.optional input[type=number],
form .group.optional input[type=password] {
	font-size: .9em;
	padding: 1px 3px 2px;
}

form .group.optional input[type=number] {
	width: 2.25em;
}


/* Login page */
/* -------------------------------------------------- */

form.login {
	margin-top: 1em;
}


/* Add book */
/* -------------------------------------------------- */

form#add-book-form .group + .group {
	margin-top: .75em;
}

form#add-book-form input[name=title] {
	width: 100%;
}

form#add-book-form input[name=author] {
	width: 80%;
}


/* Search */
/* -------------------------------------------------- */

.search {
	margin-bottom: 1.5em;
	padding: 0 20px;
}

.search input[type=text] {
	background: rgba(0, 0, 0, 0.2);
	border: none;
	border-radius: 2px;
	color: #fff;
	font-size: 1em;
	padding: 4px 6px 5px;
	width: 120px;
}

.search input[type=text]:focus {
	outline: none;
}

.search button {
	-webkit-appearance: none;
	background: none;
	border: none;
	color: #6c8098;
	cursor: pointer;
	font-size: 1em;
	padding: 4px 8px 5px;
}

.search button object {
	height: .8em;
	margin: 2px 0 0;
	width: .8em;
}

.search button:hover {
	background: rgba(0, 0, 0, 0.3);
	border-radius: 2px;
}


/* Detail page */
/* -------------------------------------------------- */

.detail .entry {
	color: #437dc4;
	cursor: pointer;
	float: right;
	font-weight: 600;
	margin-left: 20px;
	text-align: center;
	width: 4.5em;
}

.detail .entry .page_number {
	background: #e5f5fd;
	border-radius: 1em;
	font-size: 1.3em;
	padding: 2px 10px 3px;
}

.detail .entry .sub {
	color: #bbb;
	font-size: .8em;
	font-style: italic;
	line-height: 1.1em;
	padding: 7px 0px 6px;
}

.detail .entry .sub .label {
	color: #ccc;
	display: block;
	font-size: .8em;
	line-height: 1em;
	margin-top: 4px;
}

.detail .entry .sub .label .total {
	color: #bbb;
	letter-spacing: -0.01em;
	padding: 0 1px;
}

.detail .entry .sub .left .pages {
	color: #848484;
	letter-spacing: -0.01em;
	padding: 0 1px;
}
/* ... */

